refactor : 기존 플랫폼 스레드를 가상 스레드로 변경